# radialsan

./: .gitignore  .prettierignore  AGENTS.md  CLAUDE.md  LICENSE  README.md  index.html  overlay.html  package-lock.json  package.json  pnpm-lock.yaml  prettier.config.js  tsconfig.json  vite.config.ts  vitest.config.ts
.github/workflows/: ci.yml  release.yml
docs/: implementation-plan.md
src/: App.css  App.svelte  App.tsx  index.css  main.ts  overlay.ts  overlay.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: actions.rs  commands.rs  input_listener.rs  lib.rs  lua_engine.rs  macos_input.rs  main.rs  menu_selection.rs  profiles.rs  settings.rs  tray.rs
src/components/: Overlay.svelte  Overlay.tsx
src/components/Editor/: ActionEditor.svelte  ActionEditor.tsx  AppearancePanel.svelte  AppearancePanel.tsx  IconPicker.svelte  IconPicker.tsx  LucideIcon.svelte  MenuPreview.svelte  MenuPreview.tsx  SliceEditor.svelte  SliceEditor.tsx  SliceList.svelte  SliceList.tsx
src/components/Layout/: Layout.svelte  Layout.tsx  RuntimeStatusBanner.svelte  RuntimeStatusBanner.tsx  Sidebar.svelte  Sidebar.tsx
src/components/PieMenu/: PieMenu.svelte  PieMenu.tsx  PieMenuRenderer.ts  (+3 more)
src/hooks/: useTauriEvents.ts
src/i18n/: index.ts
src/pages/: Dashboard.svelte  Dashboard.tsx  GlobalSettings.svelte  GlobalSettings.tsx  MenuEditor.svelte  MenuEditor.tsx  Profiles.svelte  Profiles.tsx
src/stores/: historyStore.ts  router.ts  settingsStore.ts
src/types/: settings.ts
src/utils/: autohotpieImport.ts  keyOptions.ts  lucideIconRegistry.ts  sharing.ts
(+10 files in other folders)
