[package]
name = "radialsan"
version = "0.1.0"
description = "Radial pie-menu launcher"
authors = []
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "radialsan_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "devtools"] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rdev = "0.5"
enigo = "0.2"
open = "5"
uuid = { version = "1", features = ["v4"] }
regex = "1"
log = "0.4"
env_logger = "0.11"
